fixed annoying overflow bug

--- a/Resources/CSS/main-layout/get-tickets.css
+++ b/Resources/CSS/main-layout/get-tickets.css
@@ -36,7 +36,8 @@
 
 .form-get-ticket {
 	display: flex;
-	flex-direction: var(--form--get-ticket-flex-dir);
+	flex-direction: column;
+	/* flex-direction: var(--form--get-ticket-flex-dir); */
 	justify-content: center;
 	align-items: center;
 	background-color: var(--theme--light--color-cta-alt);
